fix headers and spacing

--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -11,7 +11,7 @@
   }
 
   .contents {
-    margin: 24px 0;
+    margin: 18px 0;
   }
 
   .login-button,.sign-up-button {
